--- a/Project2 Dashboard/Analysis/Hotel Revenue Managment.ipynb
+++ b/Project2 Dashboard/Analysis/Hotel Revenue Managment.ipynb
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "data=pd.read_csv(r'C:\\Users\\spana\\Documents\\Project1\\HotelRevenueMgm\\Project2\\hotel_bookings.csv')\n",
+    "data=pd.read_csv(r'C:\\Users\\spana\\Projects\\Project2 Dashboard\\Data\\hotel_bookings.csv')\n",
     "data.head()"
    ]
   },
@@ -1251,56 +1251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4fbe6d67-962a-4861-9b2a-897d2654a0f2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "hotel                 False\n",
-       "Year                  False\n",
-       "country               False\n",
-       "Month                 False\n",
-       "reservation_status    False\n",
-       "count_reserv          False\n",
-       "Country                True\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_reserv1.isnull().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0b9c1d97-ec3e-4232-9ae9-212ebadeaa4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "hotel                 False\n",
-       "Year                  False\n",
-       "country               False\n",
-       "Month                 False\n",
-       "reservation_status    False\n",
-       "count_reserv          False\n",
-       "Country               False\n",
-       "dtype: bool"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_reserv1=count_reserv1.dropna()\n",
     "count_reserv1.isnull().any()"
